Implement job grid